cmake_minimum_required(VERSION 3.2)
PROJECT(boost-asio-examples)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
FIND_PACKAGE(Boost 1.82.0 REQUIRED COMPONENTS system thread regex)
include_directories(3rdparty)
INCLUDE_DIRECTORIES("./Parse")
IF(Boost_FOUND)
    INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
    LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
    message("Boost include:${Boost_INCLUDE_DIRS}")
    message("Boost lib:${Boost_LIBRARY_DIRS}")
ENDIF(Boost_FOUND)

SET(USED_LIBS ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_REGEX_LIBRARY})

ADD_EXECUTABLE(web ./main.cc)
TARGET_LINK_LIBRARIES(web ${USED_LIBS})
ADD_EXECUTABLE(client ./client.cc)
TARGET_LINK_LIBRARIES(client ${USED_LIBS})